osprey_worker/src/osprey/engine/ast_validator/validators/tests/test_validate_dynamic_calls_have_annotated_rvalue/test_invalid_annotation[List[wut]].txt
error: expected simple type in `List`
--> main.sml:1:10
     |
   1 | Foo: List[wut] = JsonData(path='$.foo')
     |           ^ got unknown non-generic type `wut`
